--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "truffle-contract": "^2.0.5",
     "ts-node": "^3.2.2",
     "tslint": "^5.3.2",
-    "typescript": "^2.3.4"
+    "typescript": "^2.3.4",
+    "web3": "^1.0.0-beta.18"
   }
 }
