--- a/package.json
+++ b/package.json
@@ -46,6 +46,6 @@
     "ts-node": "^3.2.2",
     "tslint": "^5.3.2",
     "typescript": "^2.3.4",
-    "web3": "1.0.0-beta.23"
+    "web3": "^1.0.0-beta.24"
   }
 }
