--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "karma-jasmine": "^1.1.0",
     "karma-jasmine-html-reporter": "^0.2.2",
     "protractor": "^5.1.2",
+    "protractor-console-plugin": "^0.1.1",
     "truffle-contract": "^3.0.0",
     "ts-node": "^3.2.2",
     "tslint": "^5.3.2",
