--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@angular/router": "^5.0.3",
     "core-js": "^2.5.1",
     "rxjs": "^5.5.2",
+    "web3": "^1.0.0-beta.26",
     "zone.js": "^0.8.18"
   },
   "devDependencies": {
@@ -47,7 +48,6 @@
     "truffle-contract": "^3.0.0",
     "ts-node": "^3.3.0",
     "tslint": "^5.8.0",
-    "typescript": "^2.6.1",
-    "web3": "^1.0.0-beta.24"
+    "typescript": "~2.4.0"
   }
 }
