--- a/package.json
+++ b/package.json
@@ -12,16 +12,16 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "~5.1.3",
-    "@angular/common": "~5.1.3",
-    "@angular/compiler": "~5.1.3",
-    "@angular/core": "~5.1.3",
-    "@angular/forms": "~5.1.3",
-    "@angular/http": "~5.1.3",
-    "@angular/platform-browser": "~5.1.3",
-    "@angular/platform-browser-dynamic": "~5.1.3",
-    "@angular/platform-server": "~5.1.3",
-    "@angular/router": "~5.1.3",
+    "@angular/animations": "^5.2.9",
+    "@angular/common": "^5.2.9",
+    "@angular/compiler": "^5.2.9",
+    "@angular/core": "^5.2.9",
+    "@angular/forms": "^5.2.9",
+    "@angular/http": "^5.2.9",
+    "@angular/platform-browser": "^5.2.9",
+    "@angular/platform-browser-dynamic": "^5.2.9",
+    "@angular/platform-server": "^5.2.9",
+    "@angular/router": "^5.2.9",
     "core-js": "^2.5.3",
     "rxjs": "^5.5.5",
     "web3": "^1.0.0-beta.31",
@@ -29,7 +29,7 @@
   },
   "devDependencies": {
     "@angular/cli": "^1.6.1",
-    "@angular/compiler-cli": "~5.1.3",
+    "@angular/compiler-cli": "^5.2.9",
     "@angular/language-service": "^4.4.6",
     "@types/jasmine": "^2.8.2",
     "@types/jasminewd2": "^2.0.3",
