Sacrificing beauty for functionality

--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "@angular/router": "^5.2.9",
     "core-js": "^2.5.4",
     "rxjs": "^5.5.8",
-    "web3": "1.0.0-beta.33",
+    "web3": "^1.0.0-beta.34",
     "zone.js": "^0.8.23"
   },
   "devDependencies": {
