--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^5.2.10",
+    "@angular/animations": "^5.2.9",
     "@angular/cdk": "^5.2.5",
     "@angular/common": "^5.2.9",
     "@angular/compiler": "^5.2.9",
@@ -26,7 +26,7 @@
     "@angular/router": "^5.2.9",
     "core-js": "^2.5.4",
     "rxjs": "^5.5.8",
-    "web3": "^1.0.0-beta.34",
+    "web3": "1.0.0-beta.34",
     "zone.js": "^0.8.23"
   },
   "devDependencies": {
