--- a/package.json
+++ b/package.json
@@ -8,32 +8,34 @@
     "build": "ng build",
     "test": "ng test --watch=false",
     "lint": "ng lint",
-    "e2e": "ng e2e"
+    "e2e": "ng e2e",
+    "postinstall": "node patch.js"
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^5.2.9",
-    "@angular/cdk": "^5.2.5",
-    "@angular/common": "^5.2.9",
-    "@angular/compiler": "^5.2.9",
-    "@angular/core": "^5.2.9",
-    "@angular/forms": "^5.2.9",
-    "@angular/http": "^5.2.9",
-    "@angular/material": "^5.2.5",
-    "@angular/platform-browser": "^5.2.9",
-    "@angular/platform-browser-dynamic": "^5.2.9",
-    "@angular/platform-server": "^5.2.9",
-    "@angular/router": "^5.2.9",
+    "@angular/animations": "6.1.7",
+    "@angular/cdk": "^6.4.7",
+    "@angular/common": "6.1.7",
+    "@angular/compiler": "6.1.7",
+    "@angular/core": "6.1.7",
+    "@angular/forms": "6.1.7",
+    "@angular/http": "6.1.7",
+    "@angular/material": "^6.4.7",
+    "@angular/platform-browser": "6.1.7",
+    "@angular/platform-browser-dynamic": "6.1.7",
+    "@angular/platform-server": "6.1.7",
+    "@angular/router": "6.1.7",
     "core-js": "^2.5.4",
-    "rxjs": "^5.5.8",
-    "web3": "1.0.0-beta.34",
-    "zone.js": "^0.8.23"
+    "rxjs": "^6.3.2",
+    "web3": "^1.0.0-beta.36",
+    "zone.js": "^0.8.26"
   },
   "devDependencies": {
-    "@angular-devkit/core": "^0.4.8",
-    "@angular/cli": "^1.7.3",
-    "@angular/compiler-cli": "^5.2.9",
-    "@angular/language-service": "^4.4.6",
+    "@angular-devkit/build-angular": "~0.8.0",
+    "@angular-devkit/core": "0.8.1",
+    "@angular/cli": "^6.2.1",
+    "@angular/compiler-cli": "6.1.7",
+    "@angular/language-service": "6.1.7",
     "@types/jasmine": "^2.8.6",
     "@types/jasminewd2": "^2.0.3",
     "@types/node": "^6.0.103",
@@ -46,11 +48,13 @@
     "karma-coverage-istanbul-reporter": "^1.4.2",
     "karma-jasmine": "^1.1.1",
     "karma-jasmine-html-reporter": "^0.2.2",
-    "protractor": "^5.3.0",
+    "protractor": "^5.4.1",
     "protractor-console-plugin": "^0.1.1",
     "truffle-contract": "^3.0.4",
     "ts-node": "^3.3.0",
     "tslint": "^5.9.1",
-    "typescript": "~2.4.0"
+    "typescript": "2.9.2",
+    "webpack": "^4.19.0",
+    "webpack-dev-server": "^3.1.8"
   }
 }
