--- a/package.json
+++ b/package.json
@@ -25,36 +25,36 @@
     "@angular/platform-browser-dynamic": "6.1.7",
     "@angular/platform-server": "6.1.7",
     "@angular/router": "6.1.7",
-    "core-js": "^2.5.4",
-    "rxjs": "^6.3.2",
-    "web3": "^1.0.0-beta.36",
+    "core-js": "^2.5.7",
+    "rxjs": "^6.3.3",
+    "web3": "1.0.0-beta.36",
     "zone.js": "^0.8.26"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.8.0",
+    "@angular-devkit/build-angular": "^0.8.8",
     "@angular-devkit/core": "0.8.1",
-    "@angular/cli": "^6.2.1",
+    "@angular/cli": "^6.2.8",
     "@angular/compiler-cli": "6.1.7",
     "@angular/language-service": "6.1.7",
-    "@types/jasmine": "^2.8.6",
-    "@types/jasminewd2": "^2.0.3",
-    "@types/node": "^6.0.103",
+    "@types/jasmine": "^2.8.12",
+    "@types/jasminewd2": "^2.0.6",
+    "@types/node": "^6.14.2",
     "codelyzer": "^3.2.2",
     "jasmine-core": "^2.99.1",
     "jasmine-spec-reporter": "^4.2.1",
     "karma": "^1.7.1",
     "karma-chrome-launcher": "^2.2.0",
     "karma-cli": "^1.0.1",
-    "karma-coverage-istanbul-reporter": "^1.4.2",
-    "karma-jasmine": "^1.1.1",
+    "karma-coverage-istanbul-reporter": "^1.4.3",
+    "karma-jasmine": "^1.1.2",
     "karma-jasmine-html-reporter": "^0.2.2",
     "protractor": "^5.4.1",
     "protractor-console-plugin": "^0.1.1",
-    "truffle-contract": "^3.0.4",
+    "truffle-contract": "^3.0.6",
     "ts-node": "^3.3.0",
-    "tslint": "^5.9.1",
+    "tslint": "^5.11.0",
     "typescript": "2.9.2",
-    "webpack": "^4.19.0",
-    "webpack-dev-server": "^3.1.8"
+    "webpack": "^4.26.1",
+    "webpack-dev-server": "^3.1.10"
   }
 }
