--- a/package.json
+++ b/package.json
@@ -13,33 +13,34 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "6.1.7",
-    "@angular/cdk": "^6.4.7",
-    "@angular/common": "6.1.7",
-    "@angular/compiler": "6.1.7",
-    "@angular/core": "6.1.7",
-    "@angular/forms": "6.1.7",
-    "@angular/http": "6.1.7",
-    "@angular/material": "^6.4.7",
-    "@angular/platform-browser": "6.1.7",
-    "@angular/platform-browser-dynamic": "6.1.7",
-    "@angular/platform-server": "6.1.7",
-    "@angular/router": "6.1.7",
+    "@angular/animations": "7.1.0",
+    "@angular/cdk": "^7.1.0",
+    "@angular/common": "7.1.0",
+    "@angular/compiler": "7.1.0",
+    "@angular/core": "7.1.0",
+    "@angular/forms": "7.1.0",
+    "@angular/http": "7.1.0",
+    "@angular/material": "^7.1.0",
+    "@angular/platform-browser": "7.1.0",
+    "@angular/platform-browser-dynamic": "7.1.0",
+    "@angular/platform-server": "7.1.0",
+    "@angular/router": "7.1.0",
     "core-js": "^2.5.7",
     "rxjs": "^6.3.3",
+    "tslib": "^1.9.0",
     "web3": "1.0.0-beta.36",
     "zone.js": "^0.8.26"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^0.8.8",
+    "@angular-devkit/build-angular": "~0.11.0",
     "@angular-devkit/core": "0.8.1",
-    "@angular/cli": "^6.2.8",
-    "@angular/compiler-cli": "6.1.7",
-    "@angular/language-service": "6.1.7",
+    "@angular/cli": "^7.1.0",
+    "@angular/compiler-cli": "7.1.0",
+    "@angular/language-service": "7.1.0",
     "@types/jasmine": "^2.8.12",
     "@types/jasminewd2": "^2.0.6",
     "@types/node": "^6.14.2",
-    "codelyzer": "^3.2.2",
+    "codelyzer": "^4.4.4",
     "jasmine-core": "^2.99.1",
     "jasmine-spec-reporter": "^4.2.1",
     "karma": "^1.7.1",
@@ -53,7 +54,7 @@
     "truffle-contract": "^3.0.6",
     "ts-node": "^3.3.0",
     "tslint": "^5.11.0",
-    "typescript": "2.9.2",
+    "typescript": "3.1.6",
     "webpack": "^4.26.1",
     "webpack-dev-server": "^3.1.10"
   }
